# basic-snmp-agent

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  deny.toml  pyproject.toml  rust-toolchain.toml
.cargo/: mutants.toml
.claude/: settings.json  settings.local.json
.claude/agents/: adr-reviewer.md  compliance-checker.md  implementer.md  reviewer-followup.md  reviewer.md  rfc-reviewer.md  wi-reviewer.md
.claude/commands/: codescene-improve.md  codescene-suppress.md  implement-and-review.md  mutants.md  review.md
.clusterfuzzlite/: Dockerfile  build.sh
.codescene/: code-health-rules.json
.github/workflows/: cflite_daily.yml  cflite_prune.yml  ci.yml  deny.yml
codec/: Cargo.toml
codec/src/: lib.rs  oid.rs  pdu.rs  value.rs
docs/rfc/: RFC-0001.md
fuzz/: Cargo.toml  README.md  arbitrary_snmpv3.rs  fuzz_support.rs  generate_seeds.rs  snmpv3.dict
fuzz/fuzz_targets/: snmpv3_request.rs  snmpv3_request_auth.rs  snmpv3_request_auth_structured.rs  snmpv3_request_structured.rs  tcp_framing.rs
gov/: config.toml  req-coverage-gaps.toml
gov/adr/: ADR-0001-arch-workspace-decomposition-into-internal-crates.toml  ADR-0002-arch-actor-model-with-single-threaded-event-loop.toml  ADR-0003-agent-channel-based-agent-communication.toml  ADR-0004-transport-session-map-keyed-by-socketaddr.toml  ADR-0005-codec-use-rasn-and-rasn-snmp-for-ber-codec.toml  ADR-0006-codec-supported-smi-value-types.toml  ADR-0007-codec-use-rasn-snmp-wire-types-directly.toml  ADR-0008-codec-jumbo-frame-message-buffer-sizing.toml  ADR-0009-codec-field-level-parse-error-granularity.toml  ADR-0010-mib-btreemap-with-rasn-oid-keys.toml  ADR-0011-codec-value-enum-as-public-api-with-objectsyntax-conversion.toml  ADR-0012-arch-hand-rolled-error-types.toml  ADR-0013-transport-certificate-storage-and-runtime-replacement.toml  ADR-0014-transport-event-loop-polling-mechanism.toml  ADR-0015-transport-dtls-session-timeout-and-cleanup.toml  ADR-0016-transport-timer-management-for-dtls-retransmissions.toml  ADR-0017-agent-construction-and-configuration-api.toml  ADR-0018-agent-graceful-shutdown.toml  ADR-0019-arch-logging-and-observability.toml  ADR-0020-agent-snmpv3-message-processing-pipeline.toml  ADR-0021-test-system-level-test-strategy-with-net-snmp-and-behave.toml  ADR-0022-security-abandon-snmp-tsm-tls-stay-on-usm-and-extend-to-authnopriv-and-authpriv.toml  ADR-0023-usm-user-database-configuration-model.toml  ADR-0024-engine-boots-persistence-via-application-provided-storage-trait.toml  ADR-0025-key-zeroisation-via-write-volatile-and-compiler-fence.toml  ADR-0026-codec-hand-written-ber-codec-replaces-rasn.toml  ADR-0027-codec-own-ber-structures-replace-rasn-snmp-wire-types.toml  ADR-0028-securityconfig-enum-and-compile-time-credential-enforcement-types.toml
gov/rfc/: CLAUDE.md
gov/schema/: work.schema.json
gov/work/: 2026-03-16-adr-0017-agent-construction-and-config-api.toml  2026-03-16-rfc-6353-framing-and-pdu-dispatch-over-plain-tcp.toml  2026-03-16-system-and-behave-tests-for-mib-reads-over-plain-tcp.toml  2026-03-16-system-and-gherkin-tests-for-mib-reads.toml  2026-03-16-tls-layer-via-rustls.toml  2026-03-16-wire-mib-store-into-the-event-loop.toml  2026-03-31-add-tsm-security-model-support-to-snmpv3-dispatch.toml  2026-04-14-retire-rfc-0006-snmp-tls-and-restore-usm-as-sanctioned-security-model.toml  2026-04-14-usm-authnopriv-and-authpriv-support-for-inbound-requests-and-traps.toml  2026-04-16-implement-rfc-0007-usm-authnopriv-and-authpriv.toml  2026-04-24-fix-req-coverage-check-test-fixtures-for-toml-format.toml  2026-04-28-add-fuzz-targets-for-tcp-framing-and-authenticated-snmpv3-processing.toml  2026-04-28-implement-req-0059-report-pdu-for-snmpunknowncontexts.toml  2026-04-28-introduce-params-struct-for-encode-v3-response.toml  2026-04-28-replace-rasn-crates-with-der-hand-written-outer-ber-codec.toml  2026-05-04-add-system-test-coverage-for-all-smiv2-data-types-in-get-responses.toml  2026-05-05-fix-security-findings-from-snmp-get-attack-surface-review.toml  2026-05-05-security-review-snmp-get-attack-surface-ber-decoding-usm-auth-priv.toml  2026-05-06-add-requirement-tracing-annotations-for-req-0109-through-req-0124.toml  2026-05-06-remove-req-0000-placeholder-annotations.toml  2026-05-06-revert-f-17-accept-non-minimal-oid-sub-identifier-encoding-under-ber.toml  2026-05-07-add-arbitrary-based-structured-fuzz-targets-for-snmpv3-dispatch.toml  2026-05-07-add-ber-token-dictionaries-for-byte-level-fuzz-targets-and-reduce-ci-fuzz-time.toml  2026-05-07-add-fuzz-coverage-reporting-and-corpus-pruning-ci-jobs.toml  2026-05-07-add-python-linting-and-formatting-black-mypy-pylint.toml  2026-05-07-split-event-loop-rs-into-smaller-modules.toml  2026-05-08-add-structured-logging-via-the-log-facade-crate.toml  2026-05-13-pin-python-dev-tools-with-uv.toml  2026-05-16-seed-snmpv3-request-fuzzer-from-snmpv3-request-structured-corpus.toml  2026-05-20-fix-fuzzing-ci-infrastructure-seed-sharing-corpus-persistence-and-happy-path-seed-coverage.toml  2026-05-28-enforce-req-0084-derive-privacy-key-internally-in-usmuser-auth-priv.toml  2026-05-28-remove-direct-libc-dependency-for-cross-platform-support.toml  2026-05-28-write-project-readme-md-with-examples.toml  2026-05-29-add-cargo-deny-for-dependency-auditing-and-duplicate-detection.toml  2026-05-29-refactor-agentbuilder-api-to-enforce-securityconfig-at-compile-time.toml  2026-06-01-security-review-remediation-usm-auth-invariant-dispatch-hardening-api-minimisation-f1-f4.toml  2026-06-03-enforce-rfc-3414-upper-bound-32-octets-on-usm-user-name.toml  2026-06-03-expose-rfc-3418-snmp-group-statistics-counters-in-the-mib-store.toml  2026-06-06-refactor-dispatch-rs-to-reduce-technical-debt-codescene-hotspot.toml  (+2 more)
mib/: Cargo.toml
mib/src/: lib.rs
src/: codec.rs  error.rs  lib.rs  mib.rs  transport.rs  usm.rs
tests/: snmp-tsm-testing-landscape.md
tests/test-agent/: Cargo.toml
tests/test-agent/src/: main.rs
tools/: generate-test-certs.sh  req_coverage_check.py
transport/: Cargo.toml
transport/src/: event_loop.rs  lib.rs  request.rs  trap.rs
(+144 files in other folders)
