[workspace]
members = [".", "tests/test-agent", "tests/test-agent-mib", "tests/test-agent-mib-common", "tests/test-agent-mib-auth", "tests/test-agent-mib-auth-priv", "tests/snmpv3-frames"]
exclude = ["fuzz"]
resolver = "2"

[package]
name = "basic-snmp-agent"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
mio = { version = "1", features = ["net", "os-poll", "os-ext"] }
libc = "0.2"
hmac = "0.12"
sha2 = "0.10"
aes = "0.8"
cfb-mode = "0.8"

[dev-dependencies]
rasn = "0.22"
rasn-smi = "0.22"
rasn-snmp = "0.22"
snmpv3-frames = { path = "tests/snmpv3-frames" }
