[project]
name = "basic-snmp-agent-tools"
version = "0.0.0"
description = "Python dev tools and tests for basic-snmp-agent"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "black>=25.1",
    "mypy>=1.15",
    "pylint>=3.3",
    "pytest>=8.3",
    "behave==1.2.6",
]

[tool.black]
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["behave"]
ignore_missing_imports = true

# The @given/@when/@then decorators from behave are untyped; suppress the
# resulting untyped-decorator errors in all Behave step and environment files.
[[tool.mypy.overrides]]
module = ["environment", "mib_read_steps", "trap_steps"]
disable_error_code = ["untyped-decorator"]

[tool.pylint.main]
load-plugins = []

[tool.pylint."messages control"]
disable = [
    "missing-module-docstring",
    # Behave's lazy module re-exports given/when/then; pylint 4.x cannot
    # resolve their callability. mypy (strict mode) catches real issues.
    "not-callable",
    "missing-function-docstring",
    "too-many-arguments",
    "too-many-positional-arguments",
    "line-too-long",
    "missing-class-docstring",
    "too-few-public-methods",
    "duplicate-code",
    "use-implicit-booleaness-not-comparison",
]
