[workspace]

[package]
name = "basic-snmp-agent-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.basic-snmp-agent]
path = ".."

[[bin]]
name = "snmpv3_request"
path = "fuzz_targets/snmpv3_request.rs"
test = false
doc = false
