[workspace]

[package]
name = "basic-snmp-agent-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
snmpv3-frames = { path = "../tests/snmpv3-frames" }
arbitrary = { version = "1", features = ["derive"] }
# Compile out all log macros for fuzz performance.
log = { version = "0.4", features = ["max_level_off"] }

[dependencies.basic-snmp-agent]
path = ".."

[[bin]]
name = "snmpv3_request"
path = "fuzz_targets/snmpv3_request.rs"
test = false
doc = false

[[bin]]
name = "generate_seeds"
path = "generate_seeds.rs"
test = false
doc = false

[[bin]]
name = "tcp_framing"
path = "fuzz_targets/tcp_framing.rs"
test = false
doc = false

[[bin]]
name = "snmpv3_request_auth"
path = "fuzz_targets/snmpv3_request_auth.rs"
test = false
doc = false

[[bin]]
name = "snmpv3_request_structured"
path = "fuzz_targets/snmpv3_request_structured.rs"
test = false
doc = false

[[bin]]
name = "snmpv3_request_auth_structured"
path = "fuzz_targets/snmpv3_request_auth_structured.rs"
test = false
doc = false
