[package]
name = "transport"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
codec = { path = "../codec" }
mib = { path = "../mib" }
mio = { version = "1", features = ["net", "os-poll", "os-ext"] }
rustls = "0.23"
libc = "0.2"

[dev-dependencies]
codec = { path = "../codec", features = ["test-support"] }
